# camyucal

./: .autotools  .cproject  .project  LICENSE  NEWS  README  README.md  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
release/: Makefile  config.status
release/src/: Makefile  camyucal
release/src/.deps/: CameraBase.Po  CameraGYCCD.Po  camyucal.Po
src/: CameraBase.cpp  CameraBase.h  CameraGYCCD.cpp  CameraGYCCD.h  Makefile.am  Makefile.in  camyucal.cpp
